fix spacing between multiple paragraphs in inscription.xsl
git-svn-id: file:///project/repositories/svn2/iospe/trunk@2691 f80ad51f-db79-4307-b24f-aec1c37bd7ba

--- a/kiln/webapps/ROOT/assets/styles/site.css
+++ b/kiln/webapps/ROOT/assets/styles/site.css
@@ -448,7 +448,7 @@ background-position: left  -65px;
 }
 
 .inscription .details p + p {
-  margin-bottom : 1em;
+  margin-top : 1em;
 }
 
 .row.inscription-data {
